Revert urls in Reports to fix 500 error, adjust header spacing to make smaller

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -322,7 +322,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem 2rem;
+  padding: 1rem 2rem;
   border-bottom: 3px solid var(--bg-accent);
 }
 
